WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
17569
REGRESSION (
r30571
): Buzzword.com doesn't load
https://bugs.webkit.org/show_bug.cgi?id=17569
Summary
REGRESSION (r30571): Buzzword.com doesn't load
Luc Jallois
Reported
2008-02-27 05:20:18 PST
Buzzword loads some info, but fail to launch (screen stays black with no info). Under OS X 10.5.2 Working fine with Safari on the same Mac.
Attachments
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2008-02-27 10:25:34 PST
Works for me with
r30551
, fails with
r30574
.
Alexey Proskuryakov
Comment 2
2008-02-28 06:04:08 PST
Rolling out
r30571
(Fragment navigation within a page permanently cancels meta refresh) fixes this for me. NB: this site only works correctly with Safari 3.0.4 user agent string.
Darin Adler
Comment 3
2008-03-02 13:19:30 PST
While this bug *is* my fault, I'm having trouble figuring out exactly why it affects buzzword.com this way. Throwing back into the unassigned pile for now. I'd also be OK with rolling the patch for the other bug out until we can figure this out.
Alexey Proskuryakov
Comment 4
2008-03-03 05:11:31 PST
Sadly, I haven't had much success reducing this.
Alexey Proskuryakov
Comment 5
2008-03-04 01:12:51 PST
Fixed in
r30738
by rolling out
r30571
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug