        Suggested by Darin, rubber-stamped by Mark.

http://bugs.webkit.org/show_bug.cgi?id=17569
        REGRESSION (r30571): Buzzword.com doesn't load

        Rolling out r30571, as determining what is wrong with it proved tricky.

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::load):
        (WebCore::FrameLoader::tokenizerProcessedData):
        (WebCore::FrameLoader::continueFragmentScrollAfterNavigationPolicy):



Canonical link: https://commits.webkit.org/24426@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30738 268f45cc-cd09-0410-ab3c-d52691b4dbfc